--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.1"
