--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "devstart": "nodemon --watch app.js"
+    "devstart": "nodemon --watch app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git"
